--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,14 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Install n8n-cli
-        run: npm install -g n8n-cli
-
-      - name: Deploy to Production
+      - name: Deploy to n8n
         env:
           N8N_HOST: ${{ secrets.N8N_PROD_HOST }}
           N8N_API_KEY: ${{ secrets.N8N_PROD_API_KEY }}
         run: |
-          n8n import:workflow --file=ex3_s8.json --id=1
+          curl -X POST "${N8N_HOST}/api/v1/workflows" \
+            -H "X-N8N-API-KEY: ${N8N_API_KEY}" \
+            -H "Content-Type: application/json" \
+            -d @ex3_s8.json
