--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'test.json'
+      - 'workflow.json'
 
 jobs:
   deploy:
@@ -29,5 +29,5 @@ jobs:
           curl -X POST "$N8N_HOST/api/v1/workflows" \
             -H "Content-Type: application/json" \
             -H "X-N8N-API-KEY: $N8N_API_KEY" \
-            --data-binary @test.json
+            --data-binary @workflow.json
 
